cpp/ql/test/library-tests/ir/points_to/points_to.expected
ERROR: getAllocation() cannot be resolved for type SimpleSSA::MemoryLocation (points_to.ql:31,42-55)
